--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sophie's Cake Website</title>
-    <link rel="stylesheet" href="CSS/Test2.css">
+    <link rel="stylesheet" href="Test2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <link rel="icon" href="Images/Sophie.jpg">
+    <link rel="icon" href="Sophie.jpg">
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="Images/Sophie.jpg"></a>
+        <a href="#" class="logo"><img src="Sophie.jpg"></a>
         <nav class="navigate">
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
@@ -24,7 +24,7 @@
         <div id="menu"><i class="fas fa-bars"></i></div>
     </header>
     <!------------------------home---------------->
-    <section id="home" class="home" style="background-image: url(Images/Cake4.jpg);">
+    <section id="home" class="home" style="background-image: url(Cake4.jpg);">
         <h1>Sophie Cakes and More</h1>
         <p>Baked with love, crafted by hands</p>
         <div class="home-btn">
@@ -43,7 +43,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="Images/Cake60.jpg">
+            <img src="Cake60.jpg">
         </div>
     </section>
 
@@ -53,7 +53,7 @@
         <div class="cake-product">
             <div class="inner-cake-row">
                 <div class="inner-cake-col">
-                    <img src="Images/Cake1.jpg">
+                    <img src="Cake1.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -65,7 +65,7 @@
                     <p> Sophie cakes and more Paw patrol themed cake designed specially for kids</p>
                 </div>
                 <div class="inner-cake-col">
-                    <img src="Images/Cake8.jpg">
+                    <img src="Cake8.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -77,7 +77,7 @@
                     <p>Beautiful and scrumdelicious cupcakes that you can gift your loved ones with anyday, anytime</p>
                 </div>
                 <div class="inner-cake-col">
-                    <img src="Images/Cake7.jpg">
+                    <img src="Cake7.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -89,7 +89,7 @@
                     <p>Are you a lover of the color blue??? Then this blue birthday cake with sprinkles as toppings is just the one for you</p>
                 </div>
                 <div class="inner-cake-col">
-                    <img src="Images/Cake5.jpg">
+                    <img src="Cake5.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -101,7 +101,7 @@
                     <p>Cupcakes and a surprise package for that special person</p>
                 </div>
                 <div class="inner-cake-col">
-                    <img src="Images/Cake2.jpg">
+                    <img src="Cake2.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -113,7 +113,7 @@
                     <p> Sophie cakes and more white butter-icing cake with a touch of gold</p>
                 </div>
                 <div class="inner-cake-col">
-                    <img src="Images/Cake9.jpg">
+                    <img src="Cake9.jpg">
                     <div class="cake-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -132,14 +132,14 @@
      <section id="services" class="services">
         <h1 class="title">Experience our top notch&nbsp;<span>Services</span></h1>
         <div class="cake-list">
-            <a class="btn1 active" src="Images/Cake10.jpg">Birthday</a>
-            <a class="btn1" src="Images/Cake11.jpg">Cupcake</a>
-            <a class="btn1" src="Images/Cake12.jpg">Surprise packages</a>
-            <a class="btn1" src="Images/Cake13.jpg">Foil Cake</a>
+            <a class="btn1 active" src="Cake10.jpg">Birthday</a>
+            <a class="btn1" src="Cake11.jpg">Cupcake</a>
+            <a class="btn1" src="Cake12.jpg">Surprise packages</a>
+            <a class="btn1" src="Cake13.jpg">Foil Cake</a>
         </div>
         <div class="cake-row">
             <div class="image">
-                <img src="Images/Cake10.jpg" id="cake-img">
+                <img src="Cake10.jpg" id="cake-img">
             </div>
             <div class="cake-content">
                 <div class="cake-info">
@@ -161,7 +161,7 @@
         <div class="cake-contact">
             <div class="cake-contact-row">
                 <div class="cake-contact-col">
-                    <img src="Images/So.jpg" class="imgs">
+                    <img src="So.jpg" class="imgs">
                 </div>
                 <div class="cake-contact-col">
                     <h1>Contact Us</h1>
